Fix submenu item styling on mobile

--- a/coderedcms/static/coderedcms/css/codered-admin.css
+++ b/coderedcms/static/coderedcms/css/codered-admin.css
@@ -220,7 +220,7 @@ input[type='checkbox']::before, input[type='radio']::before {
     font-size: 1.1em;
 }
 .nav-submenu .menu-item a {
-    padding: 0.6em 0 0.6em 2em;
+    padding: 0.6em 0 0.6em 3.5em;
 }
 
 .nav-main .account:hover, .nav-main .account:focus {
